--- a/app/src/main/res/layout/activite_principale.xml
+++ b/app/src/main/res/layout/activite_principale.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/BtestLoc"
-        android:id="@+id/button"
+        android:id="@+id/BtestLoc"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
@@ -18,7 +18,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/BtestHTTP"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button"
+        android:id="@+id/BtestHTTP"
+        android:layout_below="@+id/BtestLoc"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/BtestLesDeux"
+        android:id="@+id/BtestLesDeux"
+        android:layout_below="@+id/BtestHTTP"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
