--- a/app/src/main/res/layout/activite_principale.xml
+++ b/app/src/main/res/layout/activite_principale.xml
@@ -5,7 +5,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ActivitePrincipale">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/BtestLoc"
+        android:id="@+id/BtestLoc"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/BtestHTTP"
+        android:id="@+id/BtestHTTP"
+        android:layout_below="@+id/BtestLoc"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/BtestLesDeux"
+        android:id="@+id/BtestLesDeux"
+        android:layout_below="@+id/BtestHTTP"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/BtestLesDeuxPeriodique"
+        android:id="@+id/BtestLesDeuxPeriodique"
+        android:layout_below="@+id/BtestLesDeux"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
